[package]
name = "fire"
version = "0.1.0"
authors = ["Vladimir Yavdoshenko <v.yavdoshenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.107.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.31.0"
piston2d-sprite = "0.59.0"
image = "0.23.0"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.6.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.6.0"
